--- a/common.env
+++ b/common.env
@@ -1,5 +1,5 @@
 DATABASE_URL=postgres://saleor:saleor@db/saleor
 DEFAULT_FROM_EMAIL=noreply@example.com
 CELERY_BROKER_URL=redis://redis:6379/1
-SECRET_KEY=changeme
+SECRET_KEY=8ecCRM04vSg0ijhaFi3wc2YifQpRUA
 EMAIL_URL=smtp://mailhog:1025
